# booklens

./: .env.example  .gitignore  Makefile  README.md  modal_app.py  pyproject.toml
apps/web/: package-lock.json  package.json
booklens_repo_v4/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_pipeline.py
booklens_repo_v4/.cursor/rules/: booklens.mdc
booklens_repo_v4/apps/web/: package.json
booklens_repo_v4/apps/web/app/: globals.css  layout.tsx  page.tsx
booklens_repo_v4/data/fixtures/: book_fixture.csv
booklens_repo_v4/docs/: DESIGN.md  LOCAL_DEV_WSL_CURSOR.md  PLAN.md
booklens_repo_v4/scripts/: 00_create_fixture_data.py  01_collect_openlibrary_search.py  02_fetch_openlibrary_work_details.py  03_enrich_google_books.py  04_clean_books.py  05_recommendation_prototype.py
docs/: ANALYTICS_PLAN.md  DEPLOYMENT.md  DESIGN.md  LIVE_DATA_PLAN.md  LOCAL_DEV_WSL_CURSOR.md  PLAN.md  PUBLIC_BETA.md  UI_REDESIGN_PLAN.md
prototypes/ui-themes/: ARTWORK.md  DECISION.md  README.md  comparison.css  comparison.js  index.html
prototypes/ui-themes/shared/: base.css  (+2 more)
scripts/: cleanup_hosted_tags.py  collect_loc_books.py  collect_openlibrary.py  enrich_google_books.py  enrich_hosted_ratings.py  enrich_openlibrary_pages.py  enrich_openlibrary_ratings.py  import_loc_books.py  import_popularity_signals.py  run_pipeline.py  seed_supabase.py  smoke_sparse_metadata.py  tag_normalization.py
supabase/: README.md
tests/: test_loc_collector.py  test_loc_importer.py  test_tag_cleanup.py  test_tag_normalization.py  test_tag_pipeline.py
(+60 files in other folders)
