[project]
name = "booklens"
version = "0.1.0"
description = "Interactive book discovery and recommendation project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "scikit-learn>=1.5.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
