[project]
name = "booklens"
version = "0.1.0"
description = "BookLens data pipeline and web foundation for book discovery and recommendations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "requests>=2.31.0",
  "scikit-learn>=1.4.0",
]

[tool.uv]
package = false
